# JMComic-Crawler-Desktop

./: .gitignore  DEV-PLAN.md  Design-Brief.md  Product-Spec-CHANGELOG.md  Product-Spec.md  README.md  RELEASE-0.1.0.md
.github/workflows/: desktop-release.yml  release.yml
tauri-app/: .gitignore  README.md  bridge.py  build.sh
tauri-app/src/: index.html
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/icons/: icon.icns
tauri-app/src-tauri/src/: main.rs
tests/test_jmcomic/: test_desktop_bridge.py  test_desktop_runtime_contract.py  test_desktop_tauri_api.py
