[package]
name = "jmcomic-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "1.6", features = [ "dialog-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
